Fixing nav spacing for larger screen sizes

--- a/css/cress.css
+++ b/css/cress.css
@@ -659,6 +659,20 @@
   margin-top: 10px;
 }
 
+@media screen and (min-width: 1920px) {
+  .nav {
+    margin-right: 260px;
+    margin-left: 260px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .nav {
+    margin-right: 140px;
+    margin-left: 140px;
+  }
+}
+
 @media screen and (max-width: 991px) {
   .navigation {
     padding: 20px 0px 25px;
