--- a/css/gc.css
+++ b/css/gc.css
@@ -750,6 +750,20 @@
   margin-top: 70px;
 }
 
+@media screen and (min-width: 1920px) {
+  .nav {
+    margin-right: 260px;
+    margin-left: 260px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .nav {
+    margin-right: 140px;
+    margin-left: 140px;
+  }
+}
+
 @media screen and (max-width: 991px) {
   .heading-2 {
     width: 80%;
