--- a/css/mobile-proj.css
+++ b/css/mobile-proj.css
@@ -511,6 +511,20 @@
   margin-bottom: 35px;
 }
 
+@media screen and (min-width: 1920px) {
+  .nav {
+    margin-right: 260px;
+    margin-left: 260px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .nav {
+    margin-right: 140px;
+    margin-left: 140px;
+  }
+}
+
 @media screen and (max-width: 991px) {
   .nav-2 {
     margin-right: 0px;
