--- a/css/pilota.css
+++ b/css/pilota.css
@@ -794,6 +794,20 @@ margin-bottom: -30px;
   font-weight: 700;
 }
 
+@media screen and (min-width: 1920px) {
+  .nav {
+    margin-right: 260px;
+    margin-left: 260px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .nav {
+    margin-right: 140px;
+    margin-left: 140px;
+  }
+}
+
 @media screen and (max-width: 991px) {
   .navigation {
     padding: 25px 0px;
